test/fail/inheritance/inherit_noexist.lly
#[
SyntaxError: Class 'invalid' does not exist.
    from inherit_noexist.lly:6
]#

class abc < invalid {  }
